--- a/src/Pages/Page1/Page1.css
+++ b/src/Pages/Page1/Page1.css
@@ -28,20 +28,29 @@
     color: black;
     padding: 10px 20px;
     font-size: 18px;
+    width: 6rem;
+    border-radius: 6px;
     border: none;
     margin-top: 20px;
     cursor: pointer;
+    margin-bottom: 10rem;
   }
   
   .dropdown {
     padding: 10px;
     font-size: 16px;
+    position: absolute;
+    top: 15%;
+    border-radius: 5px;
+    width: 10rem;
+    right: 70%;
   }
   
   .calendar-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 200px;
   }
   
   .calendar-header {
