--- a/src/Pages/Page1/Page1.css
+++ b/src/Pages/Page1/Page1.css
@@ -35,11 +35,13 @@
     padding: 12px 25px;
     font-size: 20px;
     font-weight: bold;
+    width: 10rem;
     border: none;
     border-radius: 8px;
     margin-top: 20px;
     cursor: pointer;
     transition: background 0.3s, transform 0.3s;
+    margin-bottom: 10rem;
 }
 
 .go-button:hover {
@@ -166,6 +168,7 @@
   .map-container {
       width: 100%;
       height: 40vh;
+     
   }
 }
 .go-button,
